--- a/c2/email_templates/reset_password.html
+++ b/c2/email_templates/reset_password.html
@@ -8,6 +8,6 @@
     <body>
         <h1>Password reset</h1>
         <p>Hello {{first_name}} {{last_name}}</p>
-        <p>Link to reset your passwor: {{link}}</p>
+        <p>Link to reset your password: {{link}}</p>
     </body>
 </html>
